--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,6 +6,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    scroll-behavior: smooth; /*Suavização do site ao clicar nos menus*/
 }
 
 
