--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -1,14 +1,11 @@
 @media (max-width: 865px) {
-    body {
-        background-color: rgb(8, 57, 73);
+    .bt-menu {
+        display: block;
     }
+
 
     .menu {
         display: none;
-    }
-
-    .btn-menu-mob {
-        display: block;
     }
 
 
@@ -68,8 +65,8 @@
         font-size: 3rem;
         color: blue;
         text-align: center;
-        margin-top: 80px;
-        margin-bottom: 50px;
+        margin-top: -10px;
+        margin-bottom: 10px;
     }
     
 
@@ -83,6 +80,7 @@
     
     .texto-sobre {
         width: 100%;
+        height: 100vh;
         font-size: 20px;
         line-height: 35px;
         text-align: justify;
@@ -95,6 +93,7 @@
     /* PROJETOS */
 
     .geral-projetos {
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
