--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,6 +6,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    scroll-behavior: smooth;
 }
 
 
@@ -13,18 +14,26 @@
     padding: 20px 4%;
 }
 
-
-.btn-voltar a {
-    padding: 10px;
-    border-radius: 20px;
+#link-topo {
     text-decoration: none;
-    font-size: 12px;
     color: #fff;
-    text-align: right;
+    background-color: rgba(0, 0, 255, 0.034);
+    padding: 2px;
+    border-radius: 20%;
 
-    display: flex;
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    
+    transition: .5s;
+}
+
+#link-topo:hover {
+    background-color: rgba(255, 0, 0, 0.432);
+    box-shadow: 3px 3px 9px #fffcfc;
     
 }
+
 
 /* ---------------------------------------- */
 
